@@ -5,6 +5,7 @@ Version 4.1.2
 - Used JMPREL to implement case_fast in P2
 - Started porting simpletools
 - Improved messages about const assignment
+- Allow strings in BASIC const declarations
 
 Version 4.1.1
 - Fixed Spin REV operator to match PNut's Spin2 definition.
